Aufgeräumt, Optimiert, Modernisiert und dabei verschiedene Fehler behoben